; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/pktsched/extr_pktsched_tcq.c_tcq_destroy_locked.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/pktsched/extr_pktsched_tcq.c_tcq_destroy_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcq_if = type { i32 }

@pktsched_verbose = common dso_local global i64 0, align 8
@LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"%s: %s scheduler destroyed\0A\00", align 1
@tcq_zone = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tcq_if*)* @tcq_destroy_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcq_destroy_locked(%struct.tcq_if* %0) #0 {
  %2 = alloca %struct.tcq_if*, align 8
  store %struct.tcq_if* %0, %struct.tcq_if** %2, align 8
  %3 = load %struct.tcq_if*, %struct.tcq_if** %2, align 8
  %4 = getelementptr inbounds %struct.tcq_if, %struct.tcq_if* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @IFCQ_LOCK_ASSERT_HELD(i32 %5)
  %7 = load %struct.tcq_if*, %struct.tcq_if** %2, align 8
  %8 = call i32 @tcq_clear_interface(%struct.tcq_if* %7)
  %9 = load i64, i64* @pktsched_verbose, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i32, i32* @LOG_DEBUG, align 4
  %13 = load %struct.tcq_if*, %struct.tcq_if** %2, align 8
  %14 = call i32 @TCQIF_IFP(%struct.tcq_if* %13)
  %15 = call i32 @if_name(i32 %14)
  %16 = load %struct.tcq_if*, %struct.tcq_if** %2, align 8
  %17 = call i32 @tcq_style(%struct.tcq_if* %16)
  %18 = call i32 @log(i32 %12, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %17)
  br label %19

19:                                               ; preds = %11, %1
  %20 = load i32, i32* @tcq_zone, align 4
  %21 = load %struct.tcq_if*, %struct.tcq_if** %2, align 8
  %22 = call i32 @zfree(i32 %20, %struct.tcq_if* %21)
  ret i32 0
}

declare dso_local i32 @IFCQ_LOCK_ASSERT_HELD(i32) #1

declare dso_local i32 @tcq_clear_interface(%struct.tcq_if*) #1

declare dso_local i32 @log(i32, i8*, i32, i32) #1

declare dso_local i32 @if_name(i32) #1

declare dso_local i32 @TCQIF_IFP(%struct.tcq_if*) #1

declare dso_local i32 @tcq_style(%struct.tcq_if*) #1

declare dso_local i32 @zfree(i32, %struct.tcq_if*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
